Scrollbar doesn't update on CSS color-scheme change https://bugs.webkit.org/show_bug.cgi?id=244494

Reviewed by Aditya Keerthi.

The color-scheme property is now diffed and triggers
invalidateScrollbars on scrollable areas.

invalidateScrollbars also now calls invalidateScrollCorners.

This causes the scrollbar and scroll corner to correctly rerender without
hovering or invalidating through other means. When UI Side Compositing is
disabled.

* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-1-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-1-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-1.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-2-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-2-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-2.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-3-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-3-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-3.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-4-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-4-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-scrollbars/scrollbar-color-scheme-dynamic-4.html: Added.
* Source/WebCore/platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::invalidateScrollbars):
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):

Canonical link: https://commits.webkit.org/266176@main